moved helper functions to a separate js file, fixed spacing below flavor text, and added a new pokemon

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,7 @@ img {
 #flavor {
   font-size: 2rem;
   text-align: center;
+  margin-bottom: 0.8rem;
 }
 
 #flavor-div {
